# SmartPR-Reviewer

./: .gitignore  CMakeLists.txt  README.md
include/: config.h.exemple  github_client.h  http_utils.h  httplib.h  json.hpp  llm_reviewer.h  sys_utils.h
src/: github_client.cpp  http_utils.cpp  llm_reviewer.cpp  main.cpp  sys_utils.cpp
